Fixed varColors not showing + added astro config {site}

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,14 +10,13 @@
   font-family: "Montserrat";
   src: url("/fonts/Montserrat-VariableFont_wght.ttf") format('truetype');
   font-weight: 100 1000;
-  font-display: swap;
 }
 
 @theme {
   --font-lato: "Lato", sans-serif;
   --font-montserrat: "Montserrat", sans-serif;
-  --color-base: "#F5F5F5";
-  --color-text: "#2B2B2B";
-  --color-accent-blue: "#1E3A5F";
-  --color-accent-yellow: "#FFC107";
+  --color-base: #f5f5f5;
+  --color-text: #2b2b2b;
+  --color-accent-blue: #1e3a5f;
+  --color-accent-yellow: #ffc107;
 }
